# tasks-queue

./: .env  .gitignore  Cargo.toml  Dockerfile.consumer  Dockerfile.producer  Dockerfile.rescheduler  Dockerfile.supervisor  README.md  docker-compose.yaml  init-db.sql
common/: Cargo.toml
common/src/: error.rs  lib.rs
consumer/: Cargo.toml  Dockerfile
consumer/src/: main.rs
producer/: Cargo.toml  Dockerfile
producer/src/: main.rs
rescheduler/: Cargo.toml
rescheduler/src/: main.rs
src/: main.rs
supervisor/: Cargo.toml
supervisor/src/: main.rs
