[package]
name = "tasks-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono"] }
tokio = { version = "1.47.1", features = ["full"]}
