[package]
name = "tasks-queue-consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
fake = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono"] }
tokio = { version = "1.47.1", features = ["full"]}
